Fix text contrast error on SelectDropdown

--- a/src/components/ContactForm/SelectDropdown/SelectDropdown.scss
+++ b/src/components/ContactForm/SelectDropdown/SelectDropdown.scss
@@ -14,7 +14,8 @@
   padding: 0 16px;
   font-family: var(--HN-Light);
   font-weight: var(--Light-Weight);
-  color: var(--Grey-50);
+  color: var(--Grey-100);
+
   font-size: var(--Body);
   text-align: left;
   background-color: var(--White);
